a lot of updates

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "events-spa-client",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3090",
   "devDependencies": {
     "autoprefixer": "6.5.1",
     "babel-core": "6.17.0",
@@ -50,6 +51,8 @@
     "whatwg-fetch": "1.0.0"
   },
   "dependencies": {
+    "axios": "^0.16.2",
+    "moment": "^2.18.1",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-redux": "^5.0.1",
