--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-dom": "^15.4.1",
     "react-redux": "^5.0.1",
     "react-router": "^3.0.0",
+    "react-share": "^1.15.0",
     "redux": "^3.6.0",
     "redux-thunk": "^2.1.0",
     "socket.io-client": "^2.0.3",
